# solid_principles_cpp

./: .clang-format  CMakeLists.txt  changelog.md  changelog.txt  conanfile.txt  main_is_comp.cpp  main_liskov.cpp  main_open_closed.cpp  main_plain.cpp  main_single_responsibility.cpp  order.cpp  readme.md
.github/workflows/: cmake.yml
examples/: main_di_comp.cpp  main_is_inh.cpp  main_liskov.cpp  main_open_closed.cpp  main_plain.cpp  main_single_responsibility.cpp
include/: authorizer_abstract.h  item.h  new_order.h  not_a_robot_authorizer_di.h  order.h  payment_processor.h  payment_processor_abstract.h  payment_processor_abstract_is.h  payment_processor_abstract_liskov.h  payment_processor_abstract_oc.h  payment_processor_abstract_sms_is_inh.h  payment_processor_credit.h  payment_processor_credit_di_comp.h  payment_processor_credit_is_comp.h  payment_processor_credit_is_inh.h  payment_processor_credit_liskov.h  payment_processor_credit_oc.h  payment_processor_debit.h  payment_processor_debit_di_comp.h  payment_processor_debit_is_comp.h  payment_processor_debit_is_inh.h  payment_processor_debit_liskov.h  payment_processor_debit_oc.h  payment_processor_paypal.h  payment_processor_paypal_di_comp.h  payment_processor_paypal_is_comp.h  payment_processor_paypal_is_inh.h  payment_processor_paypal_liskov.h  payment_processor_paypal_oc.h  sms_authorizer.h  sms_authorizer_di.h  trouble.h
src/: new_order.cpp  order.cpp  payment_processor.cpp
